--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,4 +1,2 @@
 <pre><%= @user.inspect %></pre>
-<%= link_to 'Facebook Login', '/auth/facebook' %>
-<%= link_to 'Developer Login', '/auth/developer' %>
-<%= link_to 'Logout', logout_path %>
+<pre><%= @posts.inspect %></pre>
