--- a/app/views/main/_header.html.erb
+++ b/app/views/main/_header.html.erb
@@ -1,1 +1,18 @@
-
+<header>
+  <nav class="navbar navbar-default">
+    <div class="container">
+      <div class="navbar-header">
+        <%= link_to 'FACEBOOK API', root_path, class: 'navbar-brand' %>
+      </div>
+      <ul class="nav navbar-nav navbar-right">
+        <% if @user %>
+          <li><%= image_tag @user['picture']['data']['url'] %></li>
+          <li><%= @user['name'] %></li>
+          <li><%= link_to 'Logout', logout_path %></li>
+        <% else @user %>
+          <li><%= link_to 'Login', '/auth/facebook' %></li>
+        <% end %>
+      </ul>
+    </div>
+  </nav>
+</header>
