--- a/app/views/main/_header.html.erb
+++ b/app/views/main/_header.html.erb
@@ -6,7 +6,9 @@
       </div>
       <ul class="nav navbar-nav navbar-right">
         <% if @user %>
-          <li class="user-header-icon" style="background-image: url(<%= @user['picture']['data']['url'] %>)"></li>
+          <li>
+            <div class="user-header-icon" style="background-image: url(<%= @user['picture']['data']['url'] %>)"></div>
+          </li>
           <li><p class="navbar-text"><%= @user['name'] %></p></li>
           <li><%= link_to 'Logout', logout_path %></li>
         <% else @user %>
