--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,2 +1,33 @@
+<main class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-10 col-md-offset-1">
+      <% @posts.try(:each) do |post| %>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <p class="text-muted"><%= DateTime.parse(post['created_time']).strftime("%e %B %Y, %H:%M") %></p>
+            <p class="lead"><%= post['message'] %></p>
+            <ul class="shared text-muted">
+              <li><%= post['likes'].try(:count) || 0 %></li>
+              <li><%= post['shares']['count'] || 0 %></li>
+            </ul>
+          </div>
+          <div class="panel-footer">
+            <% post['comments']['data'].try(:each) do |comment| %>
+              <ul class="shared text-muted">
+                <li><%= comment['from']['name'] %></li>
+                <li><%= DateTime.parse(comment['created_time']).strftime("%e %B %Y, %H:%M") %></li>
+              </ul>
+              <p><%= comment['message'] %></p>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
+
+
+    </div>
+  </div>
+</main>
+
+
 <pre><%= @user.inspect %></pre>
 <pre><%= @posts.inspect %></pre>
