--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2,6 +2,7 @@ header {
   .user-header-icon {
     width: 30px;
     height: 30px;
+    margin-top: 10px;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -10,7 +11,11 @@ header {
 }
 ul.shared {
   list-style: none;
+  padding-left: 0;
   li {
     display: inline;
   }
+}
+p.comment {
+  padding-left: 25px;
 }
