--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,7 @@
 <main class="container">
   <div class="row">
     <div class="col-xs-12 col-md-10 col-md-offset-1">
-      <% @posts.try(:each) do |post| %>
+      <% @posts.try(:limit, 5).try(:each) do |post| %>
         <div class="panel panel-default">
           <div class="panel-body">
             <p class="text-muted"><%= DateTime.parse(post['created_time']).strftime("%e %B %Y, %H:%M") %></p>
@@ -10,8 +10,8 @@
               <p class="lead"><%= post['message'] %></p>
             <% end %>
             <ul class="shared text-muted">
-              <li><%= post['likes'] ? post['likes'].try(:count) : 0 %></li>
-              <li><%= post['shares'] ? post['shares'].try(:[], 'count') : 0 %></li>
+              <li><span class="glyphicon glyphicon-thumbs-up"></span><%= post['likes'] ? post['likes'].try(:count) : 0 %></li>
+              <li><span class="glyphicon glyphicon-share-alt"></span><%= post['shares'] ? post['shares'].try(:[], 'count') : 0 %></li>
             </ul>
           </div>
           <% if post['comments'] %>
@@ -21,7 +21,7 @@
                   <li><%= comment['from']['name'] %></li>
                   <li><%= DateTime.parse(comment['created_time']).strftime("%e %B %Y, %H:%M") %></li>
                 </ul>
-                <p><%= comment['message'] %></p>
+                <p class="comment"><%= comment['message'] %></p>
               <% end %>
             </div>
           <% end %>
