Style view for faild authorization

--- a/app/views/main/auth_fail.html.erb
+++ b/app/views/main/auth_fail.html.erb
@@ -1,1 +1,7 @@
-<h1>Authorization failed</h1>
+<main class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-10 col-md-offset-1">
+      <h2>Authorization failed</h2>
+    </div>
+  </div>
+</main>
